Refacto Views Contact

--- a/application/views/scripts/contact/form.phtml
+++ b/application/views/scripts/contact/form.phtml
@@ -23,14 +23,14 @@
 		<dd <?php if($this->item == "commune") echo "style='display: none'"; ?>>
 			<select name='ID_FONCTION' >
 				<?php foreach( $this->contact_fonction_list as $item ) : ?>
-				<?php
-					if($item["ID_FONCTION"] == 2 && $this->user_info == null) {
-										
-					}
-					else {
-				?>
-				<option value='<?php echo $item["ID_FONCTION"] ?>' <?php if(($item["ID_FONCTION"] == $this->user_info["ID_FONCTION"]) || ($this->item == "commune" && $item["ID_FONCTION"] == 2)) echo "selected" ?> ><?php echo $item["LIBELLE_FONCTION"] ?></option>
-				<?php } ?>
+					<?php
+						if(
+							$item["ID_FONCTION"] != 2
+							|| $this->user_info != null
+						) {
+					?>
+						<option value='<?php echo $item["ID_FONCTION"] ?>' <?php if(($item["ID_FONCTION"] == $this->user_info["ID_FONCTION"]) || ($this->item == "commune" && $item["ID_FONCTION"] == 2)) echo "selected" ?> ><?php echo $item["LIBELLE_FONCTION"] ?></option>
+					<?php } ?>
 				<?php endforeach ?>
 			</select>
 		</dd>
@@ -52,7 +52,7 @@
 			<select name='ID_UTILISATEURCIVILITE' style='width: 90px' >
 				<option value='null' >--</option>
 				<?php foreach( $this->civilite_list as $item ) : ?>
-				<option value="<?php echo $item["ID_UTILISATEURCIVILITE"] ?>" <?php if($item["ID_UTILISATEURCIVILITE"] == $this->user_info["ID_UTILISATEURCIVILITE"]) echo "selected" ?> ><?php echo $item["LIBELLE_UTILISATEURCIVILITE"] ?></option>
+					<option value="<?php echo $item["ID_UTILISATEURCIVILITE"] ?>" <?php if($item["ID_UTILISATEURCIVILITE"] == $this->user_info["ID_UTILISATEURCIVILITE"]) echo "selected" ?> ><?php echo $item["LIBELLE_UTILISATEURCIVILITE"] ?></option>
 				<?php endforeach ?>
 			</select>
 			<input type='text' maxlength="50" value="<?php if(isset($this->user_info["NOM_UTILISATEURINFORMATIONS"])) echo $this->user_info["NOM_UTILISATEURINFORMATIONS"] ?>" name='NOM_UTILISATEURINFORMATIONS' placeholder='Nom' />
@@ -62,17 +62,17 @@
 		<!-- Téléphone fixe du contact -->
 		<dt>Téléphone</dt>
 		<dd>
-			<span><i class='sprite sprite-telephone' ></i> <input type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFIXE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFIXE_UTILISATEURINFORMATIONS"] ?>" name='TELFIXE_UTILISATEURINFORMATIONS'/></span><br/>
+			<span><em class='sprite sprite-telephone' ></em> <input type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFIXE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFIXE_UTILISATEURINFORMATIONS"] ?>" name='TELFIXE_UTILISATEURINFORMATIONS'/></span><br/>
 		</dd>
                 
                 <dt>Fax</dt>
 		<dd>
-			<span><i class='sprite sprite-printer_empty' ></i> <input type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFAX_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFAX_UTILISATEURINFORMATIONS"] ?>" name='TELFAX_UTILISATEURINFORMATIONS' /></span><br/>
+			<span><em class='sprite sprite-printer_empty' ></em> <input type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFAX_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFAX_UTILISATEURINFORMATIONS"] ?>" name='TELFAX_UTILISATEURINFORMATIONS' /></span><br/>
 		</dd>
                 
                 <dt>Portable</dt>
 		<dd>
-			<span><i class='sprite sprite-phone' ></i> <input type='text' maxlength="20"  value="<?php if(isset($this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>" name='TELPORTABLE_UTILISATEURINFORMATIONS' /></span>
+			<span><em class='sprite sprite-phone' ></em> <input type='text' maxlength="20"  value="<?php if(isset($this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>" name='TELPORTABLE_UTILISATEURINFORMATIONS' /></span>
 		</dd>
 		
 		<!-- Mail du contact-->
