--- a/application/views/scripts/contact/partial_fiche_read.phtml
+++ b/application/views/scripts/contact/partial_fiche_read.phtml
@@ -9,8 +9,9 @@
             <span class="valeur">
             <?php
                 echo $this->TELFIXE_UTILISATEURINFORMATIONS ;
-                if( $this->TELPORTABLE_UTILISATEURINFORMATIONS  != "" )
-                 echo " / ".$this->TELPORTABLE_UTILISATEURINFORMATIONS ;
+                if( $this->TELPORTABLE_UTILISATEURINFORMATIONS  != "" ) {
+                    echo " / ".$this->TELPORTABLE_UTILISATEURINFORMATIONS ;
+                }
             ?>
             </span>
         </li>
