--- a/application/views/scripts/dossier/dialogcommshow.phtml
+++ b/application/views/scripts/dossier/dialogcommshow.phtml
@@ -1,4 +1,2 @@
-<?php
-
-echo "<h3>".$this->infosComm['LIBELLE_COMMISSION']."</h3><br/>";
-echo "Voulez vous programmer le passage en commission de ce dossier le ".$this->dateSelect." à la commission : ".$this->infosDateComm['LIBELLE_DATECOMMISSION']."<br/>";
+<h3><?php echo $this->infosComm['LIBELLE_COMMISSION'] ?></h3><br/>
+Voulez vous programmer le passage en commission de ce dossier le <?php echo $this->dateSelect ?> à la commission : <?php echo $this->infosDateComm['LIBELLE_DATECOMMISSION'] ?><br/>
