--- a/application/views/scripts/dossier/formdocmanquant.phtml
+++ b/application/views/scripts/dossier/formdocmanquant.phtml
@@ -1,16 +1,16 @@
+<div id='infosIncomplet_<?php echo $this->numDocManquant ?>' >
+Dossier incomplet le <input class='date' type='text' name='dateDocManquant[]' id='dateDocManquant_<?php echo $this->numDocManquant ?>' value='<?php echo $this->dateDay ?>'/>&nbsp;<button class='today btn'><em class='icon-calendar'></em>&nbsp;Aujourd'hui</button>
+&nbsp;&nbsp;&nbsp;<button class='btn cancelIncomplet' id='cancelIncomplet_<?php echo $this->numDocManquant ?>'><em class='icon-remove'></em>&nbsp;Annuler</button>
+
+<textarea  name='docManquant[]' class='docManquant' id='docManquant_<?php echo $this->numDocManquant ?>' rows='5' cols='100'>
 <?php
-	echo "<div id='infosIncomplet_".$this->numDocManquant."' >";
-	echo "Dossier incomplet le <input class='date' type='text' name='dateDocManquant[]' id='dateDocManquant_".$this->numDocManquant."' value='".$this->dateDay."'/>&nbsp;<button class='today btn'><i class='icon-calendar'></i>&nbsp;Aujourd'hui</button>";
-	echo "&nbsp;&nbsp;&nbsp;<button class='btn cancelIncomplet' id='cancelIncomplet_".$this->numDocManquant."'><i class='icon-remove'></i>&nbsp;Annuler</button>";
-	echo "<textarea  name='docManquant[]' class='docManquant' id='docManquant_".$this->numDocManquant."' rows='5' cols='100'>";
-	foreach($this->listeDoc as $val => $ue)
-	{
-		echo $ue['LIBELLE_DOCMANQUANT']."\n";
-	}
-	echo "</textarea>";
-	
-	echo "Date de réception des pièces <input class='date' type='text' name='dateReceptionDocManquant[]' id='dateReceptionDocManquant_".$this->numDocManquant."' />&nbsp;<button class='today btn'><i class='icon-calendar'></i>&nbsp;Aujourd'hui</button>";
-	echo "&nbsp;&nbsp;&nbsp;<button class='btn validDocManquant'><i class='icon-lock'></i>&nbsp;Valider la reception de document</button>";
-	
-	echo "</div>";
+foreach($this->listeDoc as $val => $ue)
+{
+	echo $ue['LIBELLE_DOCMANQUANT']."\n";
+}
 ?>
+</textarea>
+
+Date de réception des pièces <input class='date' type='text' name='dateReceptionDocManquant[]' id='dateReceptionDocManquant_<?php echo $this->numDocManquant ?>' />&nbsp;<button class='today btn'><em class='icon-calendar'></em>&nbsp;Aujourd'hui</button>
+&nbsp;&nbsp;&nbsp;<button class='btn validDocManquant'><em class='icon-lock'></em>&nbsp;Valider la reception de document</button>
+</div>
