ajout service instructeur manif + DP

--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -938,31 +938,21 @@
 					$("#ANOMALIE").show();
 				}
 
-
-				if($("#selectNature").val() == 1 || $("#selectNature").val() == 2){
+				var listeDoc = {
+					1: "PC", 
+					2: "AT", 
+					14: "PA", 
+					30: "DP",
+					62: "CU"
+				};
+				if(listeDoc[$("#selectNature").val()]){
 					$("#docurbaVal").html('');
-					var docurbaVal;
-					switch($("#selectNature").val()){
-						case '1':
-							docurbaVal = "PC";
-						break;
-						case '2':
-							docurbaVal = "AT";
-						break;
-						case '62':
-							docurbaVal = "CU";
-						break;
-						case '30':
-							docurbaVal = "DP";
-						break;
-						case '14':
-							docurbaVal = "PA";
-						break;
-					}
+					var docurbaVal = listeDoc[$("#selectNature").val()];
+
 					$("#docurbaVal").prepend(docurbaVal);
 				}else{
 					$("#docurbaVal").html('');
-				}
+				}  
 				$("#chargement").html('');
 
 				$('#loading').hide();
