--- a/application/views/scripts/search/dossier.phtml
+++ b/application/views/scripts/search/dossier.phtml
@@ -84,7 +84,7 @@
         </div>
         <div class='row-fluid'>
             <div class='span4'>
-                <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune'>
+                <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune' onchange="masquerBoutonExportCalc()">
                     <option value=''></option>
                 <?php foreach( $this->array_communes as $commune ) : ?>
                     <option value='<?php echo $commune["NUMINSEE_COMMUNE"] ?>' <?php if(isset($_GET["commune"]) && $commune["NUMINSEE_COMMUNE"] == $_GET["commune"]) echo 'selected' ?>><?php echo $commune["LIBELLE_COMMUNE"] ?></option>
@@ -92,7 +92,7 @@
                 </select>
             </div>
             <div class='span3'>
-                <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie'>
+                <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie' onchange="masquerBoutonExportCalc()">
                     <option value=''></option>
                     <?php foreach( $this->array_voies as $voie ) : ?>
                         <option value='<?php echo $voie["ID_RUE"] ?>' <?php if(isset($_GET["voie"]) && $voie["ID_RUE"] == $_GET["voie"]) echo 'selected' ?>><?php echo $voie["LIBELLE_RUE"] ?></option>
@@ -105,28 +105,28 @@
                 <span class='span1'>du&nbsp;</span>
 
 
-                <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()">
+                <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
                 &nbsp;au&nbsp;
-                <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()">
+                <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
             </div>
         </div>
         <div class='row-fluid'>
             <div class='span4'>
-                <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" />
+                <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" onkeypress="masquerBoutonExportCalc()" />
             </div>
             <div class='span3'>&nbsp;</div>
             <div class='span5'>
                 <span class='span1'>&nbsp;</span>
                 <span class='span2'>Réception</span>
                 <span class='span1'>du&nbsp;</span>
-                <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+                <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
                 &nbsp;au&nbsp;
-                <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+                <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
             </div>
         </div>
         <div class='row-fluid'>
             <div class='span4'>
-                <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionnez un préventionniste'>
+                <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionnez un préventionniste' onchange="masquerBoutonExportCalc()">
                     <option value=''></option>
                     <?php foreach( $this->liste_prev as $prev ) : ?>
                     <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
@@ -138,9 +138,9 @@
                 <span class='span1'>&nbsp;</span>
                 <span class='span2'>Réponse</span>
                 <span class='span1'>du&nbsp;</span>
-                <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+                <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
                 &nbsp;au&nbsp;
-                <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+                <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
             </div>
         </div>
     </div>
